fix: Style fixes

--- a/dev/css/style.scss
+++ b/dev/css/style.scss
@@ -30,7 +30,7 @@ label {
 header {
   width: 100%;
   background-color: $blue-dark;
-  padding: 0.75rem 2rem;
+  padding: 0.75rem;
 }
 .nav-container {
   width: 100%;
@@ -40,6 +40,10 @@ main {
   padding-top: 1.5rem;
 }
 // layout
+
+.component {
+  max-width: 100%;
+}
 
 .header-nav {
   list-style: none;
@@ -57,8 +61,8 @@ main {
 .contain {
   display: flex;
   flex-direction: row;
-  width: 600px;
-  max-width: 90%;
+  width: 90%;
+  max-width: 600px;
   margin: 0 auto;
 }
 .billed {
